Realizado a criação de efeitos de hover nos botões das redes sociais. Foi realizado a tentativa de fazer o mobile, porém sem sucesso, mais tarde irei pesquisar vídeos e ler documentos sobre responsividade para treinar e tentar realizar a responsividade desse projeto.

--- a/ed07-origin/style.css
+++ b/ed07-origin/style.css
@@ -2,9 +2,10 @@
     margin: 0;
 }
 
-html, body {
+html,
+body {
     height: 100%;
-    --black: hsl(240,6%, 13%);
+    --black: hsl(240, 6%, 13%);
     --gray: hsl(240, 9%, 89%);
     --bgDesktop: hsl(240, 6%, 8%);
 
@@ -20,9 +21,11 @@ body {
 }
 
 main {
-    background: url(img/background.svg);
-    width: 375px;
-    height: 812px;
+    background: url(img/background.svg) no-repeat center;
+    
+    /* Para responsividade
+    width: 100vw;
+    height: 100vh; */
 }
 
 .container {
@@ -35,7 +38,7 @@ main {
 }
 
 .avatar {
-   
+
     width: 10rem;
     margin: 11.5rem auto 0;
     position: relative;
@@ -47,7 +50,7 @@ main {
     z-index: 1;
 }
 
-.avatar > img {
+.avatar>img {
     width: 10rem;
     height: 11.5rem;
 
@@ -65,7 +68,7 @@ h1 {
 a {
     color: var(--gray);
     text-decoration: none;
-    margin-top: 0.25rem; 
+    margin-top: 0.25rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,5 +87,13 @@ ul {
     flex-direction: row;
     justify-content: center;
     gap: 0.5rem;
+
+}
+
+li:hover {
+    background-color: lightcoral;
+    filter:opacity(65%);
+    transition: 1.5s;
+    box-shadow:hsl(240, 21%, 91%);
 
 }
